@@ -1,7 +1,7 @@
 *****
 * fVDI structure declarations, by Johan Klockars
 *
-* $Id: types.inc,v 1.16 2006-11-12 20:06:23 standa Exp $
+* $Id: types.inc,v 1.17 2006-11-15 23:20:06 standa Exp $
 *
 * This is auto-generated by the Makefile from fvdi.h using
 *  gcc -E -DANONYMOUS fvdi.h | structer Virtual=vwk Workstation=wk \
@@ -287,14 +287,15 @@ font_extra_unpacked_format	equ	104
 font_extra_width_table	equ	106
 font_extra_next_size	equ	110
 font_extra_first_size	equ	114
-font_extra_filename	equ	118
-font_extra_index	equ	122
-font_extra_current	equ	124
-font_extra_cache	equ	128
-font_extra_scratch	equ	132
-font_extra_effects	equ	136
-font_extra_underline_offset	equ	138
-font_struct_size	equ	140
+font_extra_ref_count	equ	118
+font_extra_filename	equ	120
+font_extra_index	equ	124
+font_extra_current	equ	126
+font_extra_cache	equ	130
+font_extra_scratch	equ	134
+font_extra_effects	equ	138
+font_extra_underline_offset	equ	140
+font_struct_size	equ	142
 
 mfdb_address	equ	0
 mfdb_width	equ	4
